force-app/main/default/objects/VisualAntidote__Document__c/VisualAntidote__Document__c.object-meta.xml
<CustomObject>
    <label>Formstack Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formstack Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>