force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__AttachToObject__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__AttachToObject__c</fullName>
    <description>Object Index</description>
    <label>AttachToObject</label>
    <length>50</length>
    <type>Text</type>
</CustomField>