force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__Document_Id__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Document_Id__c</fullName>
    <label>Document Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>