force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__Document_Key__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__Document_Key__c</fullName>
    <label>Document Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>