force-app/main/default/objects/VisualAntidote__Document__c/fields/VisualAntidote__UploadToSF__c.field-meta.xml
<CustomField>
    <fullName>VisualAntidote__UploadToSF__c</fullName>
    <description>Attachment/File/Chatter</description>
    <label>UploadToSF</label>
    <length>50</length>
    <type>Text</type>
</CustomField>